--- a/static/all-css-chunk.css
+++ b/static/all-css-chunk.css
@@ -11507,49 +11507,6 @@ div#shared⮕w⮕competition-teams⮕main.dark-background-1.svelte-17ii5ec.svelt
   background: linear-gradient(90deg, transparent 10%, #9F4949 107.77%)
 }
 
-div#background-modal-blur.svelte-uqxww9 {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 4000;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, .5)
-}
-
-div.competition-modal.svelte-uqxww9 {
-  position: fixed;
-  z-index: 10000;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background: var(--white);
-  box-shadow: 0 4px 16px #00000014;
-  border-radius: 12px 12px 0 0;
-  padding: 20px;
-  overflow: hidden;
-  display: grid;
-  align-content: space-between
-}
-
-@media only screen and (min-width: 726px) {
-  div.competition-modal.svelte-uqxww9 {
-    top: 0;
-    margin: auto;
-    width: 480px;
-    max-width: 480px;
-    height: 188px;
-    max-height: 188px;
-    border-radius: 12px
-  }
-}
-
-div.competition-modal.dark-background-1.svelte-uqxww9 {
-  background-color: var(--dark-theme) !important
-}
-
 div#competition⮕w⮕participant-list⮕main.svelte-15uhyxd.svelte-15uhyxd {
   position: relative;
   width: 100%;
@@ -11900,6 +11857,223 @@ div#competition⮕w⮕rules⮕box.dark-background-1 h3,
 div#competition⮕w⮕rules⮕box.dark-background-1 p,
 div#competition⮕w⮕rules⮕box.dark-background-1 li {
   color: var(--white)
+}
+
+div#background-modal-blur.svelte-uqxww9 {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 4000;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, .5)
+}
+
+div.competition-modal.svelte-uqxww9 {
+  position: fixed;
+  z-index: 10000;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: var(--white);
+  box-shadow: 0 4px 16px #00000014;
+  border-radius: 12px 12px 0 0;
+  padding: 20px;
+  overflow: hidden;
+  display: grid;
+  align-content: space-between
+}
+
+@media only screen and (min-width: 726px) {
+  div.competition-modal.svelte-uqxww9 {
+    top: 0;
+    margin: auto;
+    width: 480px;
+    max-width: 480px;
+    height: 188px;
+    max-height: 188px;
+    border-radius: 12px
+  }
+}
+
+div.competition-modal.dark-background-1.svelte-uqxww9 {
+  background-color: var(--dark-theme) !important
+}
+
+div#fixture⮕competition⮕w⮕pool-selection⮕main.svelte-1i0qrf9.svelte-1i0qrf9 {
+  position: relative;
+  width: 100%;
+  background: var(--whitev2);
+  border-radius: 8px;
+  overflow: hidden
+}
+
+div#fixture⮕competition⮕w⮕pool-selection⮕top-row.svelte-1i0qrf9.svelte-1i0qrf9 {
+  min-height: 74px;
+  max-height: 74px;
+  padding: 16px 20px
+}
+
+.disabled.svelte-1i0qrf9.svelte-1i0qrf9 {
+  background-color: var(--grey-shade)
+}
+
+div.status-pill.svelte-1i0qrf9.svelte-1i0qrf9 {
+  border-radius: 8px;
+  height: 44px;
+  padding: 10px 20px
+}
+
+div.green.svelte-1i0qrf9.svelte-1i0qrf9 {
+  background: #4DA025
+}
+
+@media only screen and (min-width: 658px) {
+  div#fixture⮕competition⮕w⮕pool-selection⮕list.svelte-1i0qrf9.svelte-1i0qrf9 {
+    min-height: 582px;
+    max-height: 582px
+  }
+}
+
+div#fixture⮕competition⮕w⮕pool-selection⮕main.dark-background-1.svelte-1i0qrf9.svelte-1i0qrf9 {
+  background-color: var(--dark-theme-1-4-shade) !important
+}
+
+.dark-background-1.svelte-1i0qrf9 div#fixture⮕competition⮕w⮕pool-selection⮕top-row.svelte-1i0qrf9 {
+  background-color: var(--dark-theme-1) !important
+}
+
+.dark-background-1.svelte-1i0qrf9 .disabled.svelte-1i0qrf9 {
+  background-color: var(--dark-theme-1-7-shade) !important
+}
+
+div#fixture⮕competition⮕w⮕main⮕box.svelte-9hm4u0.svelte-9hm4u0 {
+  border-radius: 12px;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr
+}
+
+div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0.svelte-9hm4u0 {
+  position: relative;
+  min-height: 138px;
+  border-radius: 8px 8px 0 0;
+  background-color: var(--white);
+  box-shadow: 0 4px 16px #00000014;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px
+}
+
+div#fixture⮕competition⮕w⮕main⮕profile.stauts-component-adjust.svelte-9hm4u0.svelte-9hm4u0 {
+  grid-template-rows: auto auto auto
+}
+
+div#fixture⮕competition⮕w⮕main⮕profile.predict-to-win.svelte-9hm4u0.svelte-9hm4u0 {
+  background: linear-gradient(297deg, var(--white) 32.98%, #B5E5B7 212.06%, #B5E5B7 212.06%)
+}
+
+div#fixture⮕competition⮕w⮕main⮕profile.predict-to-lose.svelte-9hm4u0.svelte-9hm4u0 {
+  background: linear-gradient(311deg, var(--white) 61.18%, #EFC3C3 161.11%)
+}
+
+div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0 div#competition-info.svelte-9hm4u0 {
+  grid-row: 1;
+  grid-column: 1/3
+}
+
+div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0 div#stats.svelte-9hm4u0 {
+  grid-row: 2;
+  grid-column: 1/3;
+  display: grid;
+  gap: 32px;
+  grid-auto-flow: column
+}
+
+div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0 div#countdown-box.svelte-9hm4u0 {
+  grid-row: 3;
+  grid-column: 1/3
+}
+
+div#fixture⮕competition⮕w⮕main⮕inner-box.svelte-9hm4u0.svelte-9hm4u0 {
+  padding: 20px 16px;
+  background: var(--white)
+}
+
+div#fixture⮕competition⮕w⮕main⮕join-box.svelte-9hm4u0.svelte-9hm4u0 {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 12px
+}
+
+div#fixture⮕competition⮕w⮕main⮕participants.svelte-9hm4u0 img.participant-main-img.svelte-9hm4u0 {
+  margin-right: -15px;
+  border-radius: 32px;
+  border: 2px solid var(--whitev2)
+}
+
+div#fixture⮕competition⮕w⮕main⮕participants.svelte-9hm4u0 img.participant-main-img.svelte-9hm4u0:last-child {
+  margin-right: 0
+}
+
+@media only screen and (min-width: 658px) {
+  div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0.svelte-9hm4u0 {
+    min-height: 88px
+  }
+
+  div#fixture⮕competition⮕w⮕main⮕profile.stauts-component-adjust.svelte-9hm4u0.svelte-9hm4u0 {
+    grid-template-rows: auto auto
+  }
+
+  div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0 div#competition-info.svelte-9hm4u0 {
+    grid-row: 1;
+    grid-column: 1/2
+  }
+
+  div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0 div#stats.svelte-9hm4u0 {
+    grid-row: 1;
+    grid-column: 2/4;
+    display: grid;
+    gap: 32px;
+    grid-auto-flow: column
+  }
+
+  div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0 div#countdown-box.svelte-9hm4u0 {
+    grid-row: 2;
+    grid-column: 1/3
+  }
+
+  div#fixture⮕competition⮕w⮕main⮕join-box.svelte-9hm4u0.svelte-9hm4u0 {
+    gap: 12px;
+    grid-template-columns: 1fr 1fr
+  }
+}
+
+div#fixture⮕competition⮕w⮕main⮕box.dark-background-1.svelte-9hm4u0.svelte-9hm4u0 {
+  background-color: unset !important
+}
+
+.dark-background-1.svelte-9hm4u0 div#fixture⮕competition⮕w⮕main⮕profile.svelte-9hm4u0 {
+  background-color: var(--dark-theme-1)
+}
+
+.dark-background-1.svelte-9hm4u0 div#fixture⮕competition⮕w⮕main⮕profile.predict-to-win.svelte-9hm4u0 {
+  background: linear-gradient(291deg, var(--dark-theme-1) 36.28%, #3F7B41 172.84%)
+}
+
+.dark-background-1.svelte-9hm4u0 div#fixture⮕competition⮕w⮕main⮕profile.predict-to-lose.svelte-9hm4u0 {
+  background: linear-gradient(297deg, var(--dark-theme-1) 33.23%, #9F4949 171.99%)
+}
+
+.dark-background-1.svelte-9hm4u0 div#fixture⮕competition⮕w⮕main⮕inner-box.svelte-9hm4u0 {
+  background: var(--dark-theme-1-4-shade)
+}
+
+.dark-background-1.svelte-9hm4u0 div#fixture⮕competition⮕w⮕main⮕participants img.participant-main-img.svelte-9hm4u0 {
+  border: 2px solid var(--dark-theme-1-4-shade)
 }
 
 div#competition⮕w⮕highlights-grid⮕competitions-outer.svelte-wbmwsg.svelte-wbmwsg {
